.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Rota__c/fields/Default_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Default_End_Time__c</fullName>
    <label>Default End Time</label>
    <type>Time</type>
</CustomField>