.vscode/allianceuat_compare/force-app/main/default/objects/sirenum__Rota__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Default_Start_Time__c</columns>
    <columns>Default_End_Time__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Site__c</field>
        <operation>contains</operation>
        <value>Cabrini</value>
    </filters>
    <label>All</label>
</ListView>